--- a/tp/tp.ipynb
+++ b/tp/tp.ipynb
@@ -44,20 +44,47 @@
     "\n",
     "O foco deste trabalho está em um variação da classificação multi-class: a classificação multi-label, em que um dado pode pertencer a várias classes diferentes.\n",
     "\n",
-    "| X  | Binary | Multi-class | Multi-label |\n",
+    "## Classification problem\n",
+    "\n",
+    "> A classification problem is when the output variable is a category, such as “red” or “blue” or “disease” and “no disease”. A classification model attempts to draw some conclusion from observed values. Given one or more inputs a classification model will try to predict the value of one or more outcomes.\n",
+    "\n",
+    "## O que é multi-label classification?\n",
+    "\n",
+    "> In machine learning, multi-label classification and the strongly related problem of multi-output classification are variants of the classification problem where multiple labels may be assigned to each instance. Multi-label classification is a generalization of multiclass classification, which is the single-label problem of categorizing instances into precisely one of more than two classes; in the multi-label problem there is no constraint on how many of the classes the instance can be assigned to.\n",
+    "\n",
+    "### Exemplificando\n",
+    "\n",
+    "| `X` | Binary | Multi-class | Multi-label |\n",
     "|:--:|:--:|:--:|:--:|\n",
-    "| X₁ | t₁ | t₂ | [t₂,t₅] |\n",
-    "| X₂ | t₂ | t₃ | [t₁,t₂,t₃,t₄] |\n",
-    "| X₃ | t₁ | t₄ | [t₃] |\n",
-    "| X₄ | t₂ | t₁ | [t₂,t₄] |\n",
-    "| X₅ | t₁ | t₃ | [t₁t₃,t₄] |"
+    "| `X₁` | `t₁` | `t₂` | `[t₂,t₅]` |\n",
+    "| `X₂` | `t₂` | `t₃` | `[t₁,t₂,t₃,t₄]` |\n",
+    "| `X₃` | `t₁` | `t₄` | `[t₃]` |\n",
+    "| `X₄` | `t₂` | `t₁` | `[t₂,t₄]` |\n",
+    "| `X₅` | `t₁` | `t₃` | `[t₁t₃,t₄]` |\n",
+    "\n",
+    "## Como resolver?\n",
+    "\n",
+    "Podemos aplicar algoritmos de classificação tradicionais para resolver esse problema? Não, esses algoritmos esperam uma única classe para cada entrada, quando, em vez disso, temos várias classes.\n",
+    "\n",
+    "Uma das maneiras de se resolver isso é construindo um sistema de recomendação. Uma abordagem simples é construindo um modelo que possa prever automaticamente classes.\n",
+    "\n",
+    "### Referência\n",
+    "\n",
+    "[https://insightlab.ufc.br/aprenda-a-estratificar-dados-multi-label-com-scikit-multilearn](https://insightlab.ufc.br/aprenda-a-estratificar-dados-multi-label-com-scikit-multilearn)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataframe"
+    "# Dataframe\n",
+    "\n",
+    "Para exemplificar nosso metodo, vamos construir um modelo que possa prever o gênero de um filme usando apenas os detalhes do plot.\n",
+    "\n",
+    "Nosso dataset é contrindo a partir dedois arquivos:\n",
+    "\n",
+    "- movie.metadata.tsv: Metadados para 81.741 filmes.\n",
+    "- plot_summaries.txt: Resumos de plots de 42.306 filmes extraídos da Wikipedia em inglês. Cada linha contém o ID do filme da Wikipedia (que indexa em movie.metadata.tsv) seguido pelo resumo do plot."
    ]
   },
   {
@@ -841,13 +868,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification problem\n",
+    "# Binary relevance\n",
     "\n",
-    "> A classification problem is when the output variable is a category, such as “red” or “blue” or “disease” and “no disease”. A classification model attempts to draw some conclusion from observed values. Given one or more inputs a classification model will try to predict the value of one or more outcomes.\n",
+    "> is arguably the most intuitive solution for learning from multi-label examples. It works by decomposing the multi-label learning task into a number of independent binary learning tasks (one per class label).\n",
     "\n",
-    "## Multi-label Classification\n",
+    "## Implementação\n",
     "\n",
-    "> In machine learning, multi-label classification and the strongly related problem of multi-output classification are variants of the classification problem where multiple labels may be assigned to each instance. Multi-label classification is a generalization of multiclass classification, which is the single-label problem of categorizing instances into precisely one of more than two classes; in the multi-label problem there is no constraint on how many of the classes the instance can be assigned to."
+    "| `X` | `y` |\n",
+    "|:--:|:--:|\n",
+    "| `X₁` | `[t₂,t₅]` |\n",
+    "| `X₂` | `[t₁,t₂,t₃,t₄]` |\n",
+    "| `X₃` | `[t₃]` |\n",
+    "\n",
+    "`X` e `y` são os features e labels, respectivamente. Usando uma abordagem de relevância binária para transformar nossa variável alvo `y`. Extraimos primeiro os labels unicos no dataset:\n",
+    "\n",
+    "    Labels unicos = [ t1, t2, t3, t4, t5 ]\n",
+    "\n",
+    "Em seguida, subistituimos a variável alvo por várias outras variáveis, cada uma pertencendo aos labels unicos do dataset. Dado o exemplo acima, uma vez que existem 5 labels, haverá 5 novas variáveis alvos com valores 0 e 1, conforme mostrado abaixo:\n",
+    "\n",
+    "| `X` | `t₁` | `t₂` | `t₃` | `t₄` | `t₅` |\n",
+    "|:--:|:--:|:--:|:--:|:--:|:--:|\n",
+    "| `X₁` | 1 | 0 | 0 | 0 | 1 |\n",
+    "| `X₂` | 1 | 1 | 1 | 1 | 0 |\n",
+    "| `X₃` | 0 | 0 | 1 | 0 | 0 |"
    ]
   },
   {
@@ -865,11 +908,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature extraction\n",
+    "# Feature extraction\n",
     "\n",
     "> In machine learning, pattern recognition, and image processing, feature extraction starts from an initial set of measured data and builds derived values (features) intended to be informative and non-redundant, facilitating the subsequent learning and generalization steps, and in some cases leading to better human interpretations. Feature extraction is related to dimensionality reduction.\n",
     "\n",
-    "### TF-IDF\n",
+    "## TF-IDF\n",
     "\n",
     "> TF-IDF (term frequency-inverse document frequency) is a statistical measure that evaluates how relevant a word is to a document in a collection of documents. This is done by multiplying two metrics: how many times a word appears in a document, and the inverse document frequency of the word across a set of documents."
    ]
@@ -883,6 +926,7 @@
     "features = 10000\n",
     "\n",
     "tfidf_vectorizer = TfidfVectorizer(max_df=0.8, max_features=features)\n",
+    "# 80-20 - 80% das amostras de dados no conjunto de treino e o resto no conjunto de validação\n",
     "xtrain, xval, ytrain, yval = train_test_split(df['plot_pre'], y, test_size=0.2, random_state=9)\n",
     "\n",
     "xtrain_tfidf = tfidf_vectorizer.fit_transform(xtrain)\n",
@@ -893,7 +937,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prediction Model"
+    "# Prediction Model\n",
+    "\n",
+    "## Logistic regression\n",
+    "\n",
+    "Treinar 363 modelos pode levar um tempo considerável. Dessa forma, construimos um modelo usando regressão logística, pois é rápido para treinar em poder computacional limitado.\n",
+    "\n",
+    "> The purpose of logistic regression is to estimate the probabilities of events, including determining a relationship between features and the probabilities of particular outcomes."
    ]
   },
   {
@@ -931,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -940,17 +990,59 @@
        "0.3156683206302113"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_pred = clf.predict(xval_tfidf)\n",
-    "#y_pred[3]\n",
-    "#multilabel_binarizer.inverse_transform(y_pred)[3]\n",
-    "\n",
     "f1_score(yval, y_pred, average=\"micro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Action', 'Crime Fiction', 'Thriller')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx = 4\n",
+    "print('{}'.format(multilabel_binarizer.inverse_transform(y_pred)[idx]))\n",
+    "y_pred[idx]"
    ]
   },
   {
