--- a/tp/tp.ipynb
+++ b/tp/tp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,15 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.81 s, sys: 74.5 ms, total: 1.88 s\n",
-      "Wall time: 2.1 s\n"
+      "CPU times: user 2.82 s, sys: 140 ms, total: 2.96 s\n",
+      "Wall time: 3.13 s\n"
      ]
     },
     {
@@ -234,7 +234,7 @@
        "4                                                                              [Drama]  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,15 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "42303it [00:02, 17095.44it/s]\n",
-      "100%|██████████| 42303/42303 [00:00<00:00, 468014.12it/s]\n"
+      "42303it [00:02, 18683.91it/s]\n",
+      "100%|██████████| 42303/42303 [00:00<00:00, 722156.32it/s]\n"
      ]
     },
     {
@@ -346,7 +346,7 @@
        "4  Seventh-day Adventist Church pastor Michael Chamberlain, his wife Lindy, their two sons, and their nine-week-old daughter Azaria are on a camping holiday in the Outback. With the baby sleeping in their tent, the family is enjoying a barbecue with their fellow campers when a cry is heard. Lindy r...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "4  [Crime Fiction, Drama, Docudrama, World cinema, Courtroom Drama]  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -544,15 +544,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.6 s, sys: 201 ms, total: 10.8 s\n",
-      "Wall time: 15 s\n"
+      "CPU times: user 8.23 s, sys: 152 ms, total: 8.38 s\n",
+      "Wall time: 8.87 s\n"
      ]
     },
     {
@@ -658,7 +658,7 @@
        "4  [Crime Fiction, Drama, Docudrama, World cinema, Courtroom Drama]  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,15 +690,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 37.6 s, sys: 277 ms, total: 37.9 s\n",
-      "Wall time: 41.2 s\n"
+      "CPU times: user 37.7 s, sys: 213 ms, total: 38 s\n",
+      "Wall time: 40 s\n"
      ]
     },
     {
@@ -804,7 +804,7 @@
        "4  [Crime Fiction, Drama, Docudrama, World cinema, Courtroom Drama]  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1068,6 +1068,26 @@
     "y_pred_prob = clf.predict_proba(xval_tfidf)\n",
     "y_pred_new = (y_pred_prob >= t).astype(int)\n",
     "f1_score(yval, y_pred_new, average=\"micro\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-fold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 5\n",
+    "kf = model_selection.KFold(n_splits=k, random_state=None)\n",
+    "model = LogisticRegression(solver= 'liblinear')\n",
+    "\n",
+    "result = cross_val_score(model , X, y, cv = kf)"
    ]
   },
   {
